# saibase

./: .eslintrc.json  .gitignore  .nxignore  .prettierignore  .yarnrc.yml  README.md  README_EN.md  commitlint.config.ts  genesis.json  holders.csv  jest.preset.js  migrations.json  netlify.toml  nx.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  deploy-patch-bot.yml  deploy.yml
apps/apis/: .env.dist  .eslintrc.json  project.json  tsconfig.json
apps/dapp/: .eslintrc.json  next.config.js  project.json
apps/dapp-e2e/: project.json
apps/frontend/: next.config.js  project.json  tailwind.config.js  tsconfig.json  tsconfig.spec.json
apps/frontend-old/: .env.dist  .eslintrc.json  jest.config.ts  next.config.js  package.json  project.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  tsconfig.spec.json
apps/main-xnft/: jest.config.ts  package.json  project.json  template.html  tsconfig.json  tsconfig.spec.json
apps/patch-bot/: .env.dist  Dockerfile  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json
apps/programs/: Anchor.toml  jest.config.ts  project.json  tsconfig.json
apps/programs/programs/sai-token-swap/: Cargo.toml
apps/programs/programs/sai-token-swap/src/: lib.rs
apps/test-app/: jest.config.ts  project.json  tsconfig.app.json
docs/: README_EN.md
libs/configuration/: README.md  jest.config.ts  project.json  tsconfig.json  tsconfig.lib.json
libs/constants/: project.json
libs/errors/: jest.config.ts  package.json  project.json
types/: ambient.d.ts  jupiter.d.ts
(+774 files in other folders)
